Fixed canvas border overflow issue in FF

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,8 +3,10 @@ body{
 	margin: 0px;
 	padding: 0px;
 	background: black;
+	overflow:hidden;
 	font-family: "helvetica neue", arial, sans-serif;
 }
+
 form{
 	margin-bottom: 0px;
 }
